// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> shadow should match snapshot when shadow down is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 gRJcam"
  />
</DocumentFragment>
`;

exports[`<Box /> shadow should match snapshot when shadow up is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jvsxiX"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when all margin directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 dGrDcd"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when all padding directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 hsVeSR"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 gJdNwj"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 bEsIbk"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when responsive margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cMmTOh"
  />
</DocumentFragment>
`;

exports[`<Box /> space should match snapshot when responsive padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 fuUkCh"
  />
</DocumentFragment>
`;
